# map-generator

./: LICENSE  README.md  pyproject.toml
conf/: conf.toml
src/fractal/: cli.py  io.py  map.py  quadtree.py  strategy.py
src/map_generator/: __main__.py  cli.py  config.py  generator.py  io.py  map.py  painter.py  presets.py  quadtree.py  strategy.py
